Take screenshot with currently selected options

Summary:
If Spectacle is running and the user activates the shortcut to start Spectacle
while he has the option "Take a new Screenshot" selected use the current settings
ad configured in the window and not those of the last taken Screenshot

BUG: 415688
FIXED-IN: 20.04.0

Test Plan: Open Spectacle, press print screen

Reviewers: #spectacle, ngraham

Reviewed By: #spectacle, ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D26929